<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.atlassian.jira.welcome</groupId>
  <artifactId>jira-welcome-plugin</artifactId>

  <organization>
    <name>Atlassian</name>
    <url>http://www.atlassian.com/</url>
  </organization>

  <parent>
    <groupId>com.atlassian.jira.welcome</groupId>
    <artifactId>jira-welcome-project</artifactId>
    <version>1.1.10</version>
  </parent>

  <name>JIRA Welcome Plugin</name>
  <description>Displays a welcome dialog for first-time usage of JIRA, as well as a whats new dialog for users just having upgraded to this version of JIRA.</description>
  <packaging>atlassian-plugin</packaging>

  <scm>
    <connection>scm:git:ssh://git@bitbucket.org/atlassian/jira-welcome-plugin</connection>
    <developerConnection>scm:git:ssh://git@bitbucket.org/atlassian/jira-welcome-plugin</developerConnection>
  </scm>

  <dependencies>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-core</artifactId>
    </dependency>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-rest-plugin</artifactId>
      <version>${jira.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.atlassian.plugins.rest</groupId>
      <artifactId>atlassian-rest-common</artifactId>
      <version>${rest.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.atlassian.sal</groupId>
      <artifactId>sal-api</artifactId>
      <version>2.6.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.3</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-func-tests</artifactId>
      <version>${jira.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.atlassian.jira</groupId>
      <artifactId>jira-tests</artifactId>
      <version>${jira.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>1.3.9</version>
    </dependency>
    <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>r06</version>
        <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>   
    <plugins>
      <plugin>
        <groupId>com.atlassian.maven.plugins</groupId>
        <artifactId>maven-jira-plugin</artifactId>
        <version>3.4</version>
        <extensions>true</extensions>
        <configuration>
          <!-- To test the what's new plugin, add "-Datlassian.dev.jira.whatsnew.show=true" -->
          <!-- NOTE: The what's new dialog will appear over the top of the welcome screen with this flag on. -->
          <jvmArgs>-Dplugin.webresource.batching.off=false -Xmx512m -XX:MaxPermSize=256m</jvmArgs>
          <skipManifestValidation>true</skipManifestValidation>
          <productVersion>${jira.version}</productVersion>
          <productDataVersion>${jira.data.version}</productDataVersion>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.1</version>
        <dependencies>
          <!-- Fix for SCM-574 -->
          <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-provider-gitexe</artifactId>
            <version>1.5</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>
